1. update test.md

--- a/_posts/2023-12-23-test.md
+++ b/_posts/2023-12-23-test.md
@@ -1,10 +1,7 @@
 ---
 layout: post
-title: "test"
+title: test
 date:   2023-12-23 02:42:00 -0000
-tags: [test]
-categories: test
-author: taot
 ---
 
 ## test
