--- a/_posts/2023-12-23-test.md
+++ b/_posts/2023-12-23-test.md
@@ -1,10 +1,7 @@
 ---
 layout: post
-title: "test"
-date:   2023-12-23
-tags: [test]
-comments: true
-author: taot
+title: test
+date: 2023-12-23
 ---
 
 ## test
