--- a/_posts/2025-07-03-cpp_array.md
+++ b/_posts/2025-07-03-cpp_array.md
@@ -42,13 +42,21 @@ $$
 C/C++ 语言中的数组最接近数组结构定义中的数组，使用的是**一块存储相同类型数据的、连续的内存空间**。不管是基本类型数据，还是结构体、对象，在数组中都是连续存储的。例如：
 
 ```cpp
-int arr[3][4] = {{0, 1, 2, 3}, {4, 5, 6, 7}, {8, 9, 10, 11}};
+int arr[3][4] = {
+    {0, 1, 2, 3},
+    {4, 5, 6, 7},
+    {8, 9, 10, 11}
+};
 ```
 
 Java 中的数组跟数据结构定义中的数组不太一样。Java 中的数组也是**存储相同类型数据**的，但**所使用的内存空间却不一定是连续（多维数组中）**。且如果是多维数组，其嵌套数组的长度也可以不同。例如：
 
 ```java
-int[][] arr = new int[][]{ {1,2,3}, {4,5}, {6,7,8,9}};
+int[][] arr = new int[][]{
+    {1,2,3},
+    {4,5},
+    {6,7,8,9}
+};
 // 另一种写法：
 int[][] arr = { {1,2,3}, {4,5}, {6,7,8,9}};
 ```
