--- a/_posts/2024-07-29-iree_flow_1.md
+++ b/_posts/2024-07-29-iree_flow_1.md
@@ -484,11 +484,11 @@ IREE 编译的入口是`IREEVMTransformPassPipeline`，`IREEVMTransformPassPipel
 * `IREE::Flow::createExpandTensorShapesPass`
   将`dynamic tensor`扩充为`tensor + dynamic dim`的对偶形式，这么做的一个好处是动态维度可以直接参与计算和推导。比如
   
-  ![Alt text](image.png)
+  ![Alt text](../blog_images/github_drawing_board_for_gitpages_blog/iree_1.png)
 
   转换成，
   
-  ![Alt text](image-1.png)
+  ![Alt text](../blog_images/github_drawing_board_for_gitpages_blog/iree_2.png)
 
 
 **未完待续......**
