--- a/_posts/2024-08-03-iree_flow_3.md
+++ b/_posts/2024-08-03-iree_flow_3.md
@@ -108,24 +108,16 @@ author: taot
 
 * `IREE::Stream::createEncodeHostTensorsPass`
   主要作用是将`tensor`的元素位宽（bit）扩充为 2 的幂大小，并按字节对齐。其中`i1~i7`转换为`i8`（1 byte），`i9~i15`转换为`i16` (2 bytes)，i`17~i31`转换为`i32` (4 bytes)，`i33~i63`转换为i64（8 bytes）。
-  ```python
-  util.initializer {
-    %cst = stream.tensor.constant : tensor<10xi4> in !stream.resource<constant> = dense<[0, 1, 2, 3, 4, 5, 6, 7, -8, -7]> : tensor<10xi4>
-    %0 = stream.resource.size %cst : !stream.resource<constant>
-    util.global.store %cst, @_constant : !stream.resource<constant>
-    util.global.store %0, @_constant__size : index
-    util.initializer.return
-  }
+
+  ![Alt text](../blog_images/github_drawing_board_for_gitpages_blog/iree_4.png)
+
+
   ```
   转换为
-  ```python
-  util.initializer {
-    %c10 = arith.constant 10 : index
-    %cst = stream.async.constant : !stream.resource<constant>{%c10} = dense<[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]> : tensor<10xi8>
-    util.global.store %cst, @_constant : !stream.resource<constant>
-    util.global.store %c10, @_constant__size : index
-    util.initializer.return
-  }
+
+  ![Alt text](../blog_images/github_drawing_board_for_gitpages_blog/iree_5.png)
+
+
   ```
   `%cst`的类型从`i4`转成了`i8`，此外`stream.tensor.constant`转换成了`stream.async.constant`，`%0 = stream.resource.size %cst : !stream.resource<constant>`直接被替换成了常量`%c10`。
 
