--- a/_posts/2024-08-03-iree_flow_3.md
+++ b/_posts/2024-08-03-iree_flow_3.md
@@ -195,11 +195,11 @@ author: taot
       %c553648160_i32 = arith.constant 553648160 : i32
       %c1_i32 = arith.constant 1 : i32
       hal.buffer_view.assert<%arg0 : !hal.buffer_view> message("tensor") shape([%c10]) type(%c553648160_i32) encoding(%c1_i32)
-      %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<10xf32> in !stream.resource<external>{%c40}
-      %1 = stream.async.transfer %0 : !stream.resource<external>{%c40} -> !stream.resource<*>{%c40}
-      %2 = stream.async.dispatch @test_dispatch_0::@test_dispatch_0_generic_10[%c10](%1[%c0 to %c40 for %c40]) : (!stream.resource<*>{%c40}) -> !stream.resource<*>{%c40}
-      %3 = stream.async.transfer %2 : !stream.resource<*>{%c40} -> !stream.resource<external>{%c40}
-      %4 = stream.tensor.export %3 : tensor<10xf32> in !stream.resource<external>{%c40} -> !hal.buffer_view
+      %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<10xf32> in !stream.resource<external>[%c40]
+      %1 = stream.async.transfer %0 : !stream.resource<external>[%c40] -> !stream.resource<*>[%c40]
+      %2 = stream.async.dispatch @test_dispatch_0::@test_dispatch_0_generic_10[%c10](%1[%c0 to %c40 for %c40]) : (!stream.resource<*>[%c40]) -> !stream.resource<*>[%c40]
+      %3 = stream.async.transfer %2 : !stream.resource<*>[%c40] -> !stream.resource<external>[%c40]
+      %4 = stream.tensor.export %3 : tensor<10xf32> in !stream.resource<external>[%c40] -> !hal.buffer_view
       return %4 : !hal.buffer_view
   }
   ```
@@ -212,9 +212,9 @@ author: taot
       %c553648160_i32 = arith.constant 553648160 : i32
       %c1_i32 = arith.constant 1 : i32
       hal.buffer_view.assert<%arg0 : !hal.buffer_view> message("tensor") shape([%c10]) type(%c553648160_i32) encoding(%c1_i32)
-      %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<10xf32> in !stream.resource<external>{%c40}
-      %1 = stream.async.dispatch @test_dispatch_0::@test_dispatch_0_generic_10[%c10](%0[%c0 to %c40 for %c40]) : (!stream.resource<external>{%c40}) -> !stream.resource<external>{%c40}
-      %2 = stream.tensor.export %1 : tensor<10xf32> in !stream.resource<external>{%c40} -> !hal.buffer_view
+      %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<10xf32> in !stream.resource<external>[%c40]
+      %1 = stream.async.dispatch @test_dispatch_0::@test_dispatch_0_generic_10[%c10](%0[%c0 to %c40 for %c40]) : (!stream.resource<external>[%c40]) -> !stream.resource<external>[%c40]
+      %2 = stream.tensor.export %1 : tensor<10xf32> in !stream.resource<external>[%c40] -> !hal.buffer_view
       return %2 : !hal.buffer_view
   }
   ```
@@ -234,10 +234,10 @@ author: taot
     %c0 = arith.constant 0 : index
     %_constant = util.global.load @_constant : !stream.resource<constant>
     hal.buffer_view.assert<%arg0 : !hal.buffer_view> message("tensor") shape([%c1, %c10]) type(%c553648160_i32) encoding(%c1_i32)
-    %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x10xf32> in !stream.resource<external>{%c40}
-    %1 = stream.async.alloca : !stream.resource<external>{%c40}
-    %2 = stream.async.dispatch @test_dispatch_0::@test_dispatch_0_generic_10[%c10](%0[%c0 to %c40 for %c40], %_constant[%c0 to %c40 for %c40], %1[%c0 to %c40 for %c40]) : (!stream.resource<external>{%c40}, !stream.resource<constant>{%c40}, !stream.resource<external>{%c40}) -> %1{%c40}
-    %3 = stream.tensor.export %2 : tensor<1x10xf32> in !stream.resource<external>{%c40} -> !hal.buffer_view
+    %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x10xf32> in !stream.resource<external>[%c40]
+    %1 = stream.async.alloca : !stream.resource<external>[%c40]
+    %2 = stream.async.dispatch @test_dispatch_0::@test_dispatch_0_generic_10[%c10](%0[%c0 to %c40 for %c40], %_constant[%c0 to %c40 for %c40], %1[%c0 to %c40 for %c40]) : (!stream.resource<external>[%c40], !stream.resource<constant>[%c40], !stream.resource<external>[%c40]) -> %1[%c40]
+    %3 = stream.tensor.export %2 : tensor<1x10xf32> in !stream.resource<external>[%c40] -> !hal.buffer_view
     return %3 : !hal.buffer_view
   }
   ```
@@ -252,14 +252,14 @@ author: taot
     %c0 = arith.constant 0 : index
     %_constant = util.global.load @_constant : !stream.resource<constant>
     hal.buffer_view.assert<%arg0 : !hal.buffer_view> message("tensor") shape([%c1, %c10]) type(%c553648160_i32) encoding(%c1_i32)
-    %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x10xf32> in !stream.resource<external>{%c40}
-    %results, %result_timepoint = stream.async.execute with(%0 as %arg1: !stream.resource<external>{%c40}, %_constant as %arg2: !stream.resource<constant>{%c40}) -> !stream.resource<external>{%c40} {
-      %3 = stream.async.alloca : !stream.resource<external>{%c40}
-      %4 = stream.async.dispatch @test_dispatch_0::@test_dispatch_0_generic_10[%c10](%arg1[%c0 to %c40 for %c40], %arg2[%c0 to %c40 for %c40], %3[%c0 to %c40 for %c40]) : (!stream.resource<external>{%c40}, !stream.resource<constant>{%c40}, !stream.resource<external>{%c40}) -> %3{%c40}
-      stream.yield %4 : !stream.resource<external>{%c40}
+    %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x10xf32> in !stream.resource<external>[%c40]
+    %results, %result_timepoint = stream.async.execute with(%0 as %arg1: !stream.resource<external>[%c40], %_constant as %arg2: !stream.resource<constant>[%c40]) -> !stream.resource<external>[%c40] {
+      %3 = stream.async.alloca : !stream.resource<external>[%c40]
+      %4 = stream.async.dispatch @test_dispatch_0::@test_dispatch_0_generic_10[%c10](%arg1[%c0 to %c40 for %c40], %arg2[%c0 to %c40 for %c40], %3[%c0 to %c40 for %c40]) : (!stream.resource<external>[%c40], !stream.resource<constant>[%c40], !stream.resource<external>[%c40]) -> %3[%c40]
+      stream.yield %4 : !stream.resource<external>[%c40]
     } => !stream.timepoint
-    %1 = stream.timepoint.await %result_timepoint => %results : !stream.resource<external>{%c40}
-    %2 = stream.tensor.export %1 : tensor<1x10xf32> in !stream.resource<external>{%c40} -> !hal.buffer_view
+    %1 = stream.timepoint.await %result_timepoint => %results : !stream.resource<external>[%c40]
+    %2 = stream.tensor.export %1 : tensor<1x10xf32> in !stream.resource<external>[%c40] -> !hal.buffer_view
     return %2 : !hal.buffer_view
   }
   ```
@@ -288,7 +288,7 @@ author: taot
   ```python
   %_constant__timepoint = util.global.load @_constant__timepoint : !stream.timepoint
   %_constant = util.global.load @_constant : !stream.resource<constant>
-  %0 = stream.timepoint.await %_constant__timepoint => %_constant : !stream.resource<constant>{%c40}
+  %0 = stream.timepoint.await %_constant__timepoint => %_constant : !stream.resource<constant>[%c40]
   ```
   * `util.global.store`
   ```python
@@ -356,14 +356,14 @@ author: taot
 
   为每个未绑定`stream.timepoint`的输入参数绑定一个`stream.timepoint`，并在`stream.async.execute`之前计算参数的最大timepoint，`stream.async.execute` 则 await 这个最大 timepoint。
   ```python
-  %results, %result_timepoint = stream.async.execute with(%0 as %arg1: !stream.resource<external>{%c40}, %_constant as %arg2: !stream.resource<constant>{%c40}) -> !stream.resource<external>{%c40} {
+  %results, %result_timepoint = stream.async.execute with(%0 as %arg1: !stream.resource<external>[%c40], %_constant as %arg2: !stream.resource<constant>[%c40]) -> !stream.resource<external>[%c40] {
     ...
   }
   ```
   转换成
   ```python
   %3 = stream.timepoint.join max(%2, %_constant__timepoint) => !stream.timepoint
-  %results, %result_timepoint = stream.async.execute await(%3) => with(%1 as %arg1: !stream.resource<external>{%c40}, %_constant as %arg2: !stream.resource<constant>{%c40}) -> !stream.resource<external>{%c40} {
+  %results, %result_timepoint = stream.async.execute await(%3) => with(%1 as %arg1: !stream.resource<external>[%c40], %_constant as %arg2: !stream.resource<constant>[%c40]) -> !stream.resource<external>[%c40] {
     ...
   }
   ```
@@ -380,15 +380,15 @@ author: taot
 * `IREE::Stream::createScheduleAllocationPass`
   * 首先将所有常量 op 聚合成一个`stream.resource.constants`，并移出该 region，`stream.resource.constants`的结果会被 append 到该 region 的输入参数中（原本直接 yield 的常量除外）。
     ```python
-    %results, %result_timepoint = stream.async.execute with() -> !stream.resource<constant>{%c40} {
-        %cst = stream.async.constant : !stream.resource<constant>{%c40} = dense<[0.000000e+00, 0.00999999977, 2.000000e-02, 3.000000e-02, 4.000000e-02, 5.000000e-02, 6.000000e-02, 7.000000e-02, 8.000000e-02, 9.000000e-02]> : tensor<10xf32>
-        stream.yield %cst : !stream.resource<constant>{%c40}
+    %results, %result_timepoint = stream.async.execute with() -> !stream.resource<constant>[%c40] {
+        %cst = stream.async.constant : !stream.resource<constant>[%c40] = dense<[0.000000e+00, 0.00999999977, 2.000000e-02, 3.000000e-02, 4.000000e-02, 5.000000e-02, 6.000000e-02, 7.000000e-02, 8.000000e-02, 9.000000e-02]> : tensor<10xf32>
+        stream.yield %cst : !stream.resource<constant>[%c40]
     } => !stream.timepoint
     ```
     转换成
     ```python
     %results, %result_timepoint = stream.resource.constants :
-        !stream.resource<constant>{%c40} = dense<[0.000000e+00, 0.00999999977, 2.000000e-02, 3.000000e-02, 4.000000e-02, 5.000000e-02, 6.000000e-02, 7.000000e-02, 8.000000e-02, 9.000000e-02]> : tensor<10xf32>
+        !stream.resource<constant>[%c40] = dense<[0.000000e+00, 0.00999999977, 2.000000e-02, 3.000000e-02, 4.000000e-02, 5.000000e-02, 6.000000e-02, 7.000000e-02, 8.000000e-02, 9.000000e-02]> : tensor<10xf32>
         => !stream.timepoint
     %0 = stream.cmd.execute with() {
     } => !stream.timepoint
@@ -408,18 +408,15 @@ author: taot
       %c1_i32 = arith.constant 1 : i32
       %c2 = arith.constant 2 : index
       hal.buffer_view.assert<%arg0 : !hal.buffer_view> message("tensor") shape([%c1, %c2]) type(%c553648160_i32) encoding(%c1_i32)
-      %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x2xf32> in !stream.resource<external>{%c8}
-      // stream.async.execute
-      %results, %result_timepoint = stream.async.execute with(%0 as %arg1: !stream.resource<external>{%c8}) -> !stream.resource<external>{%c40} {
-        %3 = stream.async.dispatch @predict_dispatch_0::@predict_dispatch_0_matmul_1x10x2[%c1, %c10](%arg1[%c0 to %c8 for %c8]) : (!stream.resource<external>{%c8}) -> !stream.resource<transient>{%c40}
-        %4 = stream.async.dispatch @predict_dispatch_1::@predict_dispatch_1_generic_10[%c1](%3[%c0 to %c40 for %c40]) : (!stream.resource<transient>{%c40}) -> !stream.resource<transient>{%c4}
-        %5 = stream.async.dispatch @predict_dispatch_2::@predict_dispatch_2_generic_1x10[%c1, %c10](%3[%c0 to %c40 for %c40], %4[%c0 to %c4 for %c4]) : (!stream.resource<transient>{%c40}, !stream.resource<transient>{%c4}) -> !stream.resource<transient>{%c40}
-        %6 = stream.async.dispatch @predict_dispatch_3::@predict_dispatch_3_generic_10[%c1](%5[%c0 to %c40 for %c40]) : (!stream.resource<transient>{%c40}) -> !stream.resource<transient>{%c4}
-        %7 = stream.async.dispatch @predict_dispatch_4::@predict_dispatch_4_generic_1x10[%c1, %c10](%5[%c0 to %c40 for %c40], %6[%c0 to %c4 for %c4]) : (!stream.resource<transient>{%c40}, !stream.resource<transient>{%c4}) -> !stream.resource<external>{%c40}
-        stream.yield %7 : !stream.resource<external>{%c40}
+      %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x2xf32> in !stream.resource<external>[%c8}]      // stream.async.execute
+      %results, %result_timepoint = stream.async.execute with(%0 as %arg1: !stream.resource<external>[%c8}] -> !stream.resource<external>[%c40] {
+        %3 = stream.async.dispatch @predict_dispatch_0::@predict_dispatch_0_matmul_1x10x2[%c1, %c10](%arg1[%c0 to %c8 for %c8]) : (!stream.resource<external>[%c8}] -> !stream.resource<transient>[%c40]
+        %4 = stream.async.dispatch @predict_dispatch_1::@predict_dispatch_1_generic_10[%c1](%3[%c0 to %c40 for %c40]) : (!stream.resource<transient>[%c40]) -> !stream.resource<transient>[%c4}]        %5 = stream.async.dispatch @predict_dispatch_2::@predict_dispatch_2_generic_1x10[%c1, %c10](%3[%c0 to %c40 for %c40], %4[%c0 to %c4 for %c4]) : (!stream.resource<transient>[%c40], !stream.resource<transient>[%c4}] -> !stream.resource<transient>[%c40]
+        %6 = stream.async.dispatch @predict_dispatch_3::@predict_dispatch_3_generic_10[%c1](%5[%c0 to %c40 for %c40]) : (!stream.resource<transient>[%c40]) -> !stream.resource<transient>[%c4}]        %7 = stream.async.dispatch @predict_dispatch_4::@predict_dispatch_4_generic_1x10[%c1, %c10](%5[%c0 to %c40 for %c40], %6[%c0 to %c4 for %c4]) : (!stream.resource<transient>[%c40], !stream.resource<transient>[%c4}] -> !stream.resource<external>[%c40]
+        stream.yield %7 : !stream.resource<external>[%c40]
       } => !stream.timepoint
-      %1 = stream.timepoint.await %result_timepoint => %results : !stream.resource<external>{%c40}
-      %2 = stream.tensor.export %1 : tensor<1x10xf32> in !stream.resource<external>{%c40} -> !hal.buffer_view
+      %1 = stream.timepoint.await %result_timepoint => %results : !stream.resource<external>[%c40]
+      %2 = stream.tensor.export %1 : tensor<1x10xf32> in !stream.resource<external>[%c40] -> !hal.buffer_view
       return %2 : !hal.buffer_view
     }
     ```
@@ -436,10 +433,9 @@ author: taot
       %c1_i32 = arith.constant 1 : i32
       %c2 = arith.constant 2 : index
       hal.buffer_view.assert<%arg0 : !hal.buffer_view> message("tensor") shape([%c1, %c2]) type(%c553648160_i32) encoding(%c1_i32)
-      %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x2xf32> in !stream.resource<external>{%c8}
-      %c0_0 = arith.constant 0 : index
+      %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x2xf32> in !stream.resource<external>[%c8}]      %c0_0 = arith.constant 0 : index
       // 申请输出resource的空间
-      %1 = stream.resource.alloc uninitialized : !stream.resource<external>{%c40}
+      %1 = stream.resource.alloc uninitialized : !stream.resource<external>[%c40]
       // 计算临时resource所需要的空间大小
       %2:5 = stream.resource.pack slices({
         [0, 2] = %c40,  // [0, 2]是某个resource的lifetime，%40是resource size
@@ -448,36 +444,36 @@ author: taot
         [3, 4] = %c4
       }) : index
       // 申请临时resource的空间
-      %result, %result_timepoint = stream.resource.alloca uninitialized : !stream.resource<transient>{%2#0} => !stream.timepoint
-      %3 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>{%c8}, %1 as %arg2: !stream.resource<external>{%c40}, %result as %arg3: !stream.resource<transient>{%2#0}) {
+      %result, %result_timepoint = stream.resource.alloca uninitialized : !stream.resource<transient>[%2#0] => !stream.timepoint
+      %3 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>[%c8}] %1 as %arg2: !stream.resource<external>[%c40], %result as %arg3: !stream.resource<transient>[%2#0]) {
         stream.cmd.dispatch @predict_dispatch_0::@predict_dispatch_0_matmul_1x10x2[%c1, %c10] {
-          ro %arg1[%c0 for %c8] : !stream.resource<external>{%c8},
-          wo %arg3[%2#1 for %c40] : !stream.resource<transient>{%2#0}
+          ro %arg1[%c0 for %c8] : !stream.resource<external>[%c8}]
+          wo %arg3[%2#1 for %c40] : !stream.resource<transient>[%2#0]
         }
         stream.cmd.dispatch @predict_dispatch_1::@predict_dispatch_1_generic_10[%c1] {
-          ro %arg3[%2#1 for %c40] : !stream.resource<transient>{%2#0},
-          wo %arg3[%2#2 for %c4] : !stream.resource<transient>{%2#0}
+          ro %arg3[%2#1 for %c40] : !stream.resource<transient>[%2#0],
+          wo %arg3[%2#2 for %c4] : !stream.resource<transient>[%2#0]
         }
         stream.cmd.dispatch @predict_dispatch_2::@predict_dispatch_2_generic_1x10[%c1, %c10] {
-          ro %arg3[%2#1 for %c40] : !stream.resource<transient>{%2#0},
-          ro %arg3[%2#2 for %c4] : !stream.resource<transient>{%2#0},
-          wo %arg3[%2#3 for %c40] : !stream.resource<transient>{%2#0}
+          ro %arg3[%2#1 for %c40] : !stream.resource<transient>[%2#0],
+          ro %arg3[%2#2 for %c4] : !stream.resource<transient>[%2#0],
+          wo %arg3[%2#3 for %c40] : !stream.resource<transient>[%2#0]
         }
         stream.cmd.dispatch @predict_dispatch_3::@predict_dispatch_3_generic_10[%c1] {
-          ro %arg3[%2#3 for %c40] : !stream.resource<transient>{%2#0},
-          wo %arg3[%2#4 for %c4] : !stream.resource<transient>{%2#0}
+          ro %arg3[%2#3 for %c40] : !stream.resource<transient>[%2#0],
+          wo %arg3[%2#4 for %c4] : !stream.resource<transient>[%2#0]
         }
         stream.cmd.dispatch @predict_dispatch_4::@predict_dispatch_4_generic_1x10[%c1, %c10] {
-          ro %arg3[%2#3 for %c40] : !stream.resource<transient>{%2#0},
-          ro %arg3[%2#4 for %c4] : !stream.resource<transient>{%2#0},
-          wo %arg2[%c0_0 for %c40] : !stream.resource<external>{%c40}
+          ro %arg3[%2#3 for %c40] : !stream.resource<transient>[%2#0],
+          ro %arg3[%2#4 for %c4] : !stream.resource<transient>[%2#0],
+          wo %arg2[%c0_0 for %c40] : !stream.resource<external>[%c40]
         }
       } => !stream.timepoint
       // 释放申请的临时空间
-      %4 = stream.resource.dealloca await(%3) => %result : !stream.resource<transient>{%2#0} => !stream.timepoint
+      %4 = stream.resource.dealloca await(%3) => %result : !stream.resource<transient>[%2#0] => !stream.timepoint
       %5 = stream.timepoint.join max(%4, %3) => !stream.timepoint
-      %6 = stream.timepoint.await %5 => %1 : !stream.resource<external>{%c40}
-      %7 = stream.tensor.export %6 : tensor<1x10xf32> in !stream.resource<external>{%c40} -> !hal.buffer_view
+      %6 = stream.timepoint.await %5 => %1 : !stream.resource<external>[%c40]
+      %7 = stream.tensor.export %6 : tensor<1x10xf32> in !stream.resource<external>[%c40] -> !hal.buffer_view
       return %7 : !hal.buffer_view
     }
     ```
@@ -488,7 +484,7 @@ author: taot
   util.initializer {
     %c40 = arith.constant 40 : index
     %results, %result_timepoint = stream.resource.constants :
-      !stream.resource<constant>{%c40} = dense<[0.000000e+00, 0.00999999977, 2.000000e-02, 3.000000e-02, 4.000000e-02, 5.000000e-02, 6.000000e-02, 7.000000e-02, 8.000000e-02, 9.000000e-02]> : tensor<10xf32>
+      !stream.resource<constant>[%c40] = dense<[0.000000e+00, 0.00999999977, 2.000000e-02, 3.000000e-02, 4.000000e-02, 5.000000e-02, 6.000000e-02, 7.000000e-02, 8.000000e-02, 9.000000e-02]> : tensor<10xf32>
       => !stream.timepoint
     %0 = stream.cmd.execute with() {
     } => !stream.timepoint
@@ -509,7 +505,7 @@ author: taot
     %c0 = arith.constant 0 : index
     %c64 = arith.constant 64 : index
     // 尝试将buffer映射为target (!stream.resource<constant>)
-    %did_map, %result = stream.resource.try_map %buffer_cst[%c0] : !util.buffer -> i1, !stream.resource<constant>{%c64}
+    %did_map, %result = stream.resource.try_map %buffer_cst[%c0] : !util.buffer -> i1, !stream.resource<constant>[%c64]
     %0:2 = scf.if %did_map -> (!stream.resource<constant>, !stream.timepoint) {
       // 如果可以映射，则直接返回映射的结果（!stream.resource<constant>）
       %4 = stream.timepoint.immediate => !stream.timepoint
@@ -517,14 +513,14 @@ author: taot
     } else {
       // 如果不能映射，需要先将buffer映射为缓冲区（stage），然后申请一段新的空间并从缓冲区拷贝数据（copy）。
       // 如果lifetime类型是Variable，则不需要try_map，直接走该分支（stage + copy）的实现。
-      %4 = stream.resource.map %buffer_cst[%c0] : !util.buffer -> !stream.resource<staging>{%c64}
-      %5 = stream.resource.alloc uninitialized : !stream.resource<constant>{%c64}
-      %6 = stream.cmd.execute with(%4 as %arg0: !stream.resource<staging>{%c64}, %5 as %arg1: !stream.resource<constant>{%c64}) {
-        stream.cmd.copy %arg0[%c0], %arg1[%c0], %c64 : !stream.resource<staging>{%c64} -> !stream.resource<constant>{%c64}
+      %4 = stream.resource.map %buffer_cst[%c0] : !util.buffer -> !stream.resource<staging>[%c64]
+      %5 = stream.resource.alloc uninitialized : !stream.resource<constant>[%c64]
+      %6 = stream.cmd.execute with(%4 as %arg0: !stream.resource<staging>[%c64], %5 as %arg1: !stream.resource<constant>[%c64]) {
+        stream.cmd.copy %arg0[%c0], %arg1[%c0], %c64 : !stream.resource<staging>[%c64] -> !stream.resource<constant>[%c64]
       } => !stream.timepoint
       scf.yield %5, %6 : !stream.resource<constant>, !stream.timepoint
     }
-    %1 = stream.resource.subview %0#0[%c0] : !stream.resource<constant>{%c64} -> !stream.resource<constant>{%c40}
+    %1 = stream.resource.subview %0#0[%c0] : !stream.resource<constant>[%c64] -> !stream.resource<constant>[%c40]
     %2 = stream.cmd.execute with() {
     } => !stream.timepoint
     %3 = stream.timepoint.join max(%0#1, %2) => !stream.timepoint
@@ -551,10 +547,9 @@ author: taot
     %c1_i32 = arith.constant 1 : i32
     %c2 = arith.constant 2 : index
     hal.buffer_view.assert<%arg0 : !hal.buffer_view> message("tensor") shape([%c1, %c2]) type(%c553648160_i32) encoding(%c1_i32)
-    %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x2xf32> in !stream.resource<external>{%c8}
-    %c0_0 = arith.constant 0 : index
+    %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x2xf32> in !stream.resource<external>[%c8}]    %c0_0 = arith.constant 0 : index
     // 申请输出resource的空间
-    %1 = stream.resource.alloc uninitialized : !stream.resource<external>{%c40}
+    %1 = stream.resource.alloc uninitialized : !stream.resource<external>[%c40]
     // 计算临时resource所需要的空间大小
     %2:5 = stream.resource.pack slices({
       [0, 2] = %c40,  // [0, 2]是某个resource的lifetime，%40是resource size
@@ -563,36 +558,36 @@ author: taot
       [3, 4] = %c4
     }) : index
     // 申请临时resource的空间
-    %result, %result_timepoint = stream.resource.alloca uninitialized : !stream.resource<transient>{%2#0} => !stream.timepoint
-    %3 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>{%c8}, %1 as %arg2: !stream.resource<external>{%c40}, %result as %arg3: !stream.resource<transient>{%2#0}) {
+    %result, %result_timepoint = stream.resource.alloca uninitialized : !stream.resource<transient>[%2#0] => !stream.timepoint
+    %3 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>[%c8}] %1 as %arg2: !stream.resource<external>[%c40], %result as %arg3: !stream.resource<transient>[%2#0]) {
       stream.cmd.dispatch @predict_dispatch_0::@predict_dispatch_0_matmul_1x10x2[%c1, %c10] {
-        ro %arg1[%c0 for %c8] : !stream.resource<external>{%c8},
-        wo %arg3[%2#1 for %c40] : !stream.resource<transient>{%2#0}
+        ro %arg1[%c0 for %c8] : !stream.resource<external>[%c8}]
+        wo %arg3[%2#1 for %c40] : !stream.resource<transient>[%2#0]
       }
       stream.cmd.dispatch @predict_dispatch_1::@predict_dispatch_1_generic_10[%c1] {
-        ro %arg3[%2#1 for %c40] : !stream.resource<transient>{%2#0},
-        wo %arg3[%2#2 for %c4] : !stream.resource<transient>{%2#0}
+        ro %arg3[%2#1 for %c40] : !stream.resource<transient>[%2#0],
+        wo %arg3[%2#2 for %c4] : !stream.resource<transient>[%2#0]
       }
       stream.cmd.dispatch @predict_dispatch_2::@predict_dispatch_2_generic_1x10[%c1, %c10] {
-        ro %arg3[%2#1 for %c40] : !stream.resource<transient>{%2#0},
-        ro %arg3[%2#2 for %c4] : !stream.resource<transient>{%2#0},
-        wo %arg3[%2#3 for %c40] : !stream.resource<transient>{%2#0}
+        ro %arg3[%2#1 for %c40] : !stream.resource<transient>[%2#0],
+        ro %arg3[%2#2 for %c4] : !stream.resource<transient>[%2#0],
+        wo %arg3[%2#3 for %c40] : !stream.resource<transient>[%2#0]
       }
       stream.cmd.dispatch @predict_dispatch_3::@predict_dispatch_3_generic_10[%c1] {
-        ro %arg3[%2#3 for %c40] : !stream.resource<transient>{%2#0},
-        wo %arg3[%2#4 for %c4] : !stream.resource<transient>{%2#0}
+        ro %arg3[%2#3 for %c40] : !stream.resource<transient>[%2#0],
+        wo %arg3[%2#4 for %c4] : !stream.resource<transient>[%2#0]
       }
       stream.cmd.dispatch @predict_dispatch_4::@predict_dispatch_4_generic_1x10[%c1, %c10] {
-        ro %arg3[%2#3 for %c40] : !stream.resource<transient>{%2#0},
-        ro %arg3[%2#4 for %c4] : !stream.resource<transient>{%2#0},
-        wo %arg2[%c0_0 for %c40] : !stream.resource<external>{%c40}
+        ro %arg3[%2#3 for %c40] : !stream.resource<transient>[%2#0],
+        ro %arg3[%2#4 for %c4] : !stream.resource<transient>[%2#0],
+        wo %arg2[%c0_0 for %c40] : !stream.resource<external>[%c40]
       }
     } => !stream.timepoint
     // 释放申请的临时空间
-    %4 = stream.resource.dealloca await(%3) => %result : !stream.resource<transient>{%2#0} => !stream.timepoint
+    %4 = stream.resource.dealloca await(%3) => %result : !stream.resource<transient>[%2#0] => !stream.timepoint
     %5 = stream.timepoint.join max(%4, %3) => !stream.timepoint
-    %6 = stream.timepoint.await %5 => %1 : !stream.resource<external>{%c40}
-    %7 = stream.tensor.export %6 : tensor<1x10xf32> in !stream.resource<external>{%c40} -> !hal.buffer_view
+    %6 = stream.timepoint.await %5 => %1 : !stream.resource<external>[%c40]
+    %7 = stream.tensor.export %6 : tensor<1x10xf32> in !stream.resource<external>[%c40] -> !hal.buffer_view
     return %7 : !hal.buffer_view
   }
   ```
@@ -609,9 +604,8 @@ author: taot
     %c1_i32 = arith.constant 1 : i32
     %c2 = arith.constant 2 : index
     hal.buffer_view.assert<%arg0 : !hal.buffer_view> message("tensor") shape([%c1, %c2]) type(%c553648160_i32) encoding(%c1_i32)
-    %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x2xf32> in !stream.resource<external>{%c8}
-    %c0_0 = arith.constant 0 : index
-    %1 = stream.resource.alloc uninitialized : !stream.resource<external>{%c40}
+    %0 = stream.tensor.import %arg0 : !hal.buffer_view -> tensor<1x2xf32> in !stream.resource<external>[%c8}]    %c0_0 = arith.constant 0 : index
+    %1 = stream.resource.alloc uninitialized : !stream.resource<external>[%c40]
     %c0_1 = arith.constant 0 : index
     %c64 = arith.constant 64 : index
     %c64_2 = arith.constant 64 : index
@@ -619,35 +613,35 @@ author: taot
     %c128_3 = arith.constant 128 : index
     %c192 = arith.constant 192 : index
     %c192_4 = arith.constant 192 : index
-    %result, %result_timepoint = stream.resource.alloca uninitialized : !stream.resource<transient>{%c192_4} => !stream.timepoint
-    %2 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>{%c8}, %1 as %arg2: !stream.resource<external>{%c40}, %result as %arg3: !stream.resource<transient>{%c192_4}) {
+    %result, %result_timepoint = stream.resource.alloca uninitialized : !stream.resource<transient>[%c19]_4} => !stream.timepoint
+    %2 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>[%c8}] %1 as %arg2: !stream.resource<external>[%c40], %result as %arg3: !stream.resource<transient>[%c19]_4}) {
       stream.cmd.dispatch @predict_dispatch_0::@predict_dispatch_0_matmul_1x10x2[%c1, %c10] {
-        ro %arg1[%c0 for %c8] : !stream.resource<external>{%c8},
-        wo %arg3[%c0_1 for %c40] : !stream.resource<transient>{%c192_4}
+        ro %arg1[%c0 for %c8] : !stream.resource<external>[%c8}]
+        wo %arg3[%c0_1 for %c40] : !stream.resource<transient>[%c19]_4}
       }
       stream.cmd.dispatch @predict_dispatch_1::@predict_dispatch_1_generic_10[%c1] {
-        ro %arg3[%c0_1 for %c40] : !stream.resource<transient>{%c192_4},
-        wo %arg3[%c64_2 for %c4] : !stream.resource<transient>{%c192_4}
+        ro %arg3[%c0_1 for %c40] : !stream.resource<transient>[%c19]_4},
+        wo %arg3[%c64_2 for %c4] : !stream.resource<transient>[%c19]_4}
       }
       stream.cmd.dispatch @predict_dispatch_2::@predict_dispatch_2_generic_1x10[%c1, %c10] {
-        ro %arg3[%c0_1 for %c40] : !stream.resource<transient>{%c192_4},
-        ro %arg3[%c64_2 for %c4] : !stream.resource<transient>{%c192_4},
-        wo %arg3[%c128_3 for %c40] : !stream.resource<transient>{%c192_4}
+        ro %arg3[%c0_1 for %c40] : !stream.resource<transient>[%c19]_4},
+        ro %arg3[%c64_2 for %c4] : !stream.resource<transient>[%c19]_4},
+        wo %arg3[%c128_3 for %c40] : !stream.resource<transient>[%c19]_4}
       }
       stream.cmd.dispatch @predict_dispatch_3::@predict_dispatch_3_generic_10[%c1] {
-        ro %arg3[%c128_3 for %c40] : !stream.resource<transient>{%c192_4},
-        wo %arg3[%c0_1 for %c4] : !stream.resource<transient>{%c192_4}
+        ro %arg3[%c128_3 for %c40] : !stream.resource<transient>[%c19]_4},
+        wo %arg3[%c0_1 for %c4] : !stream.resource<transient>[%c19]_4}
       }
       stream.cmd.dispatch @predict_dispatch_4::@predict_dispatch_4_generic_1x10[%c1, %c10] {
-        ro %arg3[%c128_3 for %c40] : !stream.resource<transient>{%c192_4},
-        ro %arg3[%c0_1 for %c4] : !stream.resource<transient>{%c192_4},
-        wo %arg2[%c0_0 for %c40] : !stream.resource<external>{%c40}
+        ro %arg3[%c128_3 for %c40] : !stream.resource<transient>[%c19]_4},
+        ro %arg3[%c0_1 for %c4] : !stream.resource<transient>[%c19]_4},
+        wo %arg2[%c0_0 for %c40] : !stream.resource<external>[%c40]
       }
     } => !stream.timepoint
-    %3 = stream.resource.dealloca await(%2) => %result : !stream.resource<transient>{%c192_4} => !stream.timepoint
+    %3 = stream.resource.dealloca await(%2) => %result : !stream.resource<transient>[%c19]_4} => !stream.timepoint
     %4 = stream.timepoint.join max(%3, %2) => !stream.timepoint
-    %5 = stream.timepoint.await %4 => %1 : !stream.resource<external>{%c40}
-    %6 = stream.tensor.export %5 : tensor<1x10xf32> in !stream.resource<external>{%c40} -> !hal.buffer_view
+    %5 = stream.timepoint.await %4 => %1 : !stream.resource<external>[%c40]
+    %6 = stream.tensor.export %5 : tensor<1x10xf32> in !stream.resource<external>[%c40] -> !hal.buffer_view
     return %6 : !hal.buffer_view
   }
   ```
@@ -677,14 +671,14 @@ author: taot
   %o = util.global.load @foo_offset : index
   %l = util.global.load @foo_length : index
   %1 = stream.resource.subview %0[%o] :
-       !stream.resource<*>{%s} -> !stream.resource<*>{%l}
-  ```
+       !stream.resource<*>[%s} ]> !stream.resource<*>[%l}
+] ```
 
   * `util.global.store`
   ```cpp
   %1 = stream.resource.subview %0[%o] :
-       !stream.resource<*>{%s} -> !stream.resource<*>{%l}
-  util.global.store %1, @foo : !stream.resource
+       !stream.resource<*>[%s} ]> !stream.resource<*>[%l}
+] util.global.store %1, @foo : !stream.resource
   ```
   转换成
   ```cpp
@@ -703,26 +697,25 @@ author: taot
   转换成
   ```cpp
   func.func @foo(%0: !stream.resource, %sz: index, %o: index, %l: index) {
-    %1 = stream.resource.subview %0[%o] : {%sz} -> {%l}
-    ...
+    %1 = stream.resource.subview %0[%o] : [%sz}]-> [%l}
+]   ...
   }
   ```
 
   * `call`
   ```cpp
-  %1 = stream.resource.subview %0[%o] : {%sz} -> {%l}
-  %r = call @foo(%1)
+  %1 = stream.resource.subview %0[%o] : [%sz}]-> [%l}
+] %r = call @foo(%1)
   ```
   转换成
   ```cpp
   %r, %rsz, %ro, %rl = call @foo(%0, %sz, %o, %l)
-  %2 = stream.resource.subview %r[%ro] : {%rsz} -> {%rl}
-  ```
+  %2 = stream.resource.subview %r[%ro] : [%rsz] -> [%rl}]  ```
 
   * `return`
   ```cpp
-  %1 = stream.resource.subview %0[%o] : {%sz} -> {%l}
-  return %1
+  %1 = stream.resource.subview %0[%o] : [%sz}]-> [%l}
+] return %1
   ```
   转换成
   ```cpp
@@ -731,8 +724,8 @@ author: taot
 
   * `branch`
   ```cpp
-  %1 = stream.resource.subview %0[%o] : {%sz} -> {%l}
-  br ^bb1(%1)
+  %1 = stream.resource.subview %0[%o] : [%sz}]-> [%l}
+] br ^bb1(%1)
 
   ^bb1(%b):
     ...
@@ -742,8 +735,8 @@ author: taot
   br ^bb1(%0, %sz, %o, %l)
     
   ^bb1(%a, %b, %c, %d):
-    %1 = stream.resource.subview %a[%b] : {%c} -> {%d}
-  ```
+    %1 = stream.resource.subview %a[%b] : [%c} ]> [%d}
+] ```
 
   * `cond_branch`
 
@@ -846,12 +839,12 @@ author: taot
 
   func.func @predict(%arg0: !hal.buffer_view) -> !hal.buffer_view attributes {iree.abi.stub} {
     ...
-    %2 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>{%c8}, %1 as %arg2: !stream.resource<external>{%c40}, %result as %arg3: !stream.resource<transient>{%c192}) {
+    %2 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>[%c8}] %1 as %arg2: !stream.resource<external>[%c40], %result as %arg3: !stream.resource<transient>[%c19]}) {
       ...
       stream.cmd.dispatch @predict_dispatch_2::@predict_dispatch_2_generic_1x10[%c1, %c10] {
-          ro %arg3[%c0 for %c40] : !stream.resource<transient>{%c192},
-          ro %arg3[%c64 for %c4] : !stream.resource<transient>{%c192},
-          wo %arg3[%c128 for %c40] : !stream.resource<transient>{%c192}
+          ro %arg3[%c0 for %c40] : !stream.resource<transient>[%c19]},
+          ro %arg3[%c64 for %c4] : !stream.resource<transient>[%c19]},
+          wo %arg3[%c128 for %c40] : !stream.resource<transient>[%c19]}
       }
       ...
     }
@@ -890,11 +883,11 @@ author: taot
 
   func.func @predict(%arg0: !hal.buffer_view) -> !hal.buffer_view attributes {iree.abi.stub} {
     ...
-    %2 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>{%c8}, %1 as %arg2: !stream.resource<external>{%c40}, %result as %arg3: !stream.resource<transient>{%c192}) {
+    %2 = stream.cmd.execute await(%result_timepoint) => with(%0 as %arg1: !stream.resource<external>[%c8}] %1 as %arg2: !stream.resource<external>[%c40], %result as %arg3: !stream.resource<transient>[%c19]}) {
       ...
       stream.cmd.dispatch @predict_dispatch_2::@predict_dispatch_2_generic_1x10[%c1, %c10](%c0, %c64, %c128 : index, index, index) {
-        ro %arg3[%c0_0 for %c192] : !stream.resource<transient>{%c192},
-        wo %arg3[%c0_0 for %c192] : !stream.resource<transient>{%c192}
+        ro %arg3[%c0_0 for %c192] : !stream.resource<transient>[%c19]},
+        wo %arg3[%c0_0 for %c192] : !stream.resource<transient>[%c19]}
       }
       ...
     }
